@@ -2,6 +2,10 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2025-01-08:
+
+- Fixed buggy emacs mode behaviour on exceeding the maximum line length.
+
 2025-01-07:
 
 - Fixed the expansion ${variable//""/string}; since the shell pattern is
